Fixed line-height not working in conjunction with overflow-y

--- a/examples/test_content.css
+++ b/examples/test_content.css
@@ -15,6 +15,7 @@
     justify-content: space-around;
     align-items: center;
     align-content: center;
+    line-height: 1.5;
 }
 
 * {
